--- a/life.html
+++ b/life.html
@@ -62,7 +62,7 @@
         <span class="life-item" id="item3">2017-1-30</span>
         <span class="life-item" id="item4">2017-1-5</span>
         <span class="life-item" id="item5">2017-4-7</span>
-        <span class="life-item no-write" id="item6">2017-5-7</span>
+        <span class="life-item" id="item6">2018-5-21</span>
         <span class="life-item no-write" id="item7">2017-6-7</span>
         <span class="life-item no-write" id="item8">2017-7-7</span>
         <span class="life-item no-write" id="item9">2017-8-8</span>
