图片压缩及命名

--- a/comment.html
+++ b/comment.html
@@ -61,7 +61,7 @@
             data-ride="carousel"
             data-interval="500000"
     >
-        <img src="pic/加载中.gif" class="loading">
+        <img src="pic/img-loading.gif" class="loading">
         <div class="carousel-inner" >
             <div class="item active">
                 <span>1</span>.主要
@@ -158,7 +158,7 @@
     </form>
     <div class="comment-container preview">
         <div class="img-container preview">
-            <img src="pic/城市.jpg"/>
+            <img src="pic/img-city.jpg"/>
         </div>
         <div class="comment preview">
             <div class="icon"></div>
@@ -196,7 +196,7 @@
     <!--  预览评论  -->
     <div class="comment-container">
         <div class="img-container">
-            <img src="pic/蓝色科技梦幻.jpg" />
+            <img src="pic/img-blueSky.jpg" />
         </div>
         <div class="comment">
             <div class="icon"></div>
@@ -269,7 +269,7 @@
                 <button class="btn btn-default" id="thank-btn"><i class="fa fa-thumbs-up"></i></button>
                 <a href="comment.html" role="button" class="btn btn-default"><i class="fa fa-comments"></i></a>
                 <div class="collapse" id="thank" style="text-align: center">
-                    <img src="pic/跪谢.gif" alt="">
+                    <img src="pic/img-thanks.gif" alt="">
                 </div>
             </div>
         </div>
