--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
         </ul>
         <div class="carousel-inner">
             <div class="item active">
-                <img src="pic/轮播图1-电脑桌面.jpg" class="img-responsive">
+                <img src="pic/carousel1-desktop.jpg" class="img-responsive">
             </div>
             <div class="item">
-                <img src="pic/轮播图2-幻想.jpg" class="img-responsive">
+                <img src="pic/carousel2-dream.jpg" class="img-responsive">
             </div>
             <div class="item">
-                <img src="pic/轮播图3-刘亦菲.jpg" class="img-responsive">
+                <img src="pic/carousel3-girl.jpg" class="img-responsive">
             </div>
         </div>
         <a href="#carousel" id="prev" class="visible-lg visible-md"  data-slide="prev">
@@ -81,7 +81,7 @@
     <br/>
     <div class="row">
         <div class="col-lg-4 col-md-4 visible-lg visible-md" style="position: relative">
-            <img src="pic/javascript.png" class="img-responsive"/>
+            <img src="pic/img-jsBook.png" class="img-responsive"/>
             <div class="img-shadow"></div>
         </div>
         <div class="col-lg-8 col-md-8">
@@ -124,7 +124,7 @@
                 <li><a href="#JQ" data-toggle="tab"><strong>JQuery</strong></a></li>
             </ul>
             <div class="tab-content">
-                <img src="pic/未来-2.png" class="img-responsive further-background visible-lg visible-md visible-sm"/>
+                <img src="pic/img-furture.png" class="img-responsive further-background visible-lg visible-md visible-sm"/>
                 <div class="tab-pane fade in active" id="ES6">
                     <p>
                         众所周知，JavaScript是一门贼好用的语言。起初，它只是为了提交表单一些基础的功能；现在我们无所用之不及，
@@ -177,7 +177,7 @@
                     <h4 class="panel-title" align="center">JQuery插件库</h4>
                 </div>
                 <div class="panel-body">
-                    <img src="pic/jq插件.png" class="img-responsive"/>
+                    <img src="pic/panel-jq.png" class="img-responsive"/>
                     <p class="panel-body-p">
                         这是一个jquery插件库，里面有很多插件，虽然没咋用过，但我很喜欢它的导航，里面的设计也可以给人灵感。
                         吐槽一句，为毛我浏览器进去就崩溃，那背景亮瞎了我的钛金狐眼。
@@ -205,7 +205,7 @@
                     <h4 class="panel-title" align="center">Bootstrap中文网</h4>
                 </div>
                 <div class="panel-body">
-                    <img src="pic/bootstrap中文.png" alt="" class="img-responsive">
+                    <img src="pic/panel-bootstrap.png" alt="" class="img-responsive">
                     <p class="panel-body-p">
                         Bootstrap，前端框架的老大，毫无争议。像我这种攻城狮的，完全享受它带给我们的视觉盛宴，至少比我们自己
                         花N时间设计来的好。顺便说一句，我的网站就是站在这个巨人的肩膀上。
@@ -347,7 +347,7 @@
                 </button>
                 <a href="comment.html" class="btn btn-default" data-skip="true"><i class="fa fa-comments"></i></a>
                 <div class="collapse" id="thank" style="text-align: center">
-                    <img src="pic/跪谢.gif" alt="">
+                    <img src="pic/img-thanks.gif" alt="">
                 </div>
             </div>
         </div>
