--- a/note.html
+++ b/note.html
@@ -167,7 +167,7 @@
             <legend style="font-size: 15px">一个小demo：</legend>
             <div class="demo-container">
                 <div class="demo-title">一个标题</div>
-                <img src="pic/轮播图2-学校风光.jpg" class="img-responsive"/>
+                <img src="pic/carousel4-school.jpg" class="img-responsive"/>
             </div>
             <br/>
             <label>css代码：</label>
@@ -446,7 +446,7 @@
                 <button class="btn btn-default" id="thank-btn"><i class="fa fa-thumbs-up"></i></button>
                 <a href="comment.html" class="btn btn-default" data-skip="true"><i class="fa fa-comments"></i></a>
                 <div class="collapse" id="thank" style="text-align: center">
-                    <img src="pic/跪谢.gif" alt="">
+                    <img src="pic/img-thanks.gif" alt="">
                 </div>
             </div>
         </div>
