--- a/show.html
+++ b/show.html
@@ -149,7 +149,7 @@
                 <button class="btn btn-default" id="thank-btn"><i class="fa fa-thumbs-up"></i></button>
                 <a href="comment.html" class="btn btn-default" data-skip="true"><i class="fa fa-comments"></i></a>
                 <div class="collapse" id="thank" style="text-align: center">
-                    <img src="pic/跪谢.gif" alt="">
+                    <img src="pic/img-thanks.gif" alt="">
                 </div>
             </div>
         </div>
