--- a/vedioPlay.html
+++ b/vedioPlay.html
@@ -62,7 +62,7 @@
                     src="video/天将雄师720p.mp4"
                     class="video"
                     id="video"
-                    poster="pic/从你的全世界路过.png"
+                    poster="pic/img-movie.png"
             ></video>
             <div class="video-control visible-lg visible-md">
                 <div class="video-range">
@@ -176,7 +176,7 @@
     </fieldset>
     <!--   评论表单  -->
     <br/><br/>
-    <img src="pic/分割线.png" style="width: 100%;opacity: 0.7"/>
+    <img src="pic/img-divider.png" style="width: 100%;opacity: 0.7"/>
     <!--   分割条   -->
     <br/><br/>
     <div class="row">
