重命名、删除无用文件

--- a/comment.html
+++ b/comment.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <title>大家的留言板</title>
     <link rel="SHORTCUT ICON" href="pic/china.ico"/>
-    <link rel="stylesheet" href="奥森字体4.2.0/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="fontawesome/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/tongY.css">
     <link rel="stylesheet" href="css/comment.css">
