--- a/show.html
+++ b/show.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <title>滔涛的展示</title>
     <link rel="SHORTCUT ICON" href="pic/china.ico"/>
-    <link rel="stylesheet" href="奥森字体4.2.0/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="fontawesome/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/tongY.css">
     <script type="text/javascript" src="js/jquery-3.1.0.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <script src="js/loadMusic.js"></script>
+    <script src="js/loadMusic.js" async></script>
     <style>
         legend{
             border-style: dotted;
