--- a/note.html
+++ b/note.html
@@ -346,7 +346,7 @@
         <br/>
         <p style="text-indent: 0">
             <label>支持：</label>
-            <a href="http://www.css88.com/book/css/properties/user-interface/user-select.htm" target="_blank" style="float: right">参考处</a>
+            <a href="http://www.css88.com/book/css/properties/user-interface/user-select.htm" target="_blank" rel="nofollow noopener noreferrer" style="float: right">参考处</a>
         </p>
         <div class="table-responsive">
             <table class="table table-hover">
