--- a/resume.html
+++ b/resume.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <title>个人简历</title>
-    <script src="http://os9h9t8fk.bkt.clouddn.com/react.development.js"></script>
-    <script src="http://os9h9t8fk.bkt.clouddn.com/react-dom.development.js"></script>
-    <script src="http://os9h9t8fk.bkt.clouddn.com/babel.min.js"></script>
+    <script src="https://unpkg.com/react@16.0.0/umd/react.production.min.js"></script>
+    <script src="https://unpkg.com/react-dom@16.0.0/umd/react-dom.production.min.js"></script>
+    <script src="https://unpkg.com/@babel/standalone@7.10.3/babel.min.js"></script>
     <style media="screen">
       *{
         margin: 0;
@@ -621,8 +621,8 @@
               <footer className="resume-footer">
                 <a href="#">ningtaostudy.cn/resume</a>
                 <a href="mailto:18255447846@163.com" className="mail" />
-                <a href="https://github.com/LitileXueZha" className="github" target="_blank" />
-                <a href="http://wpa.qq.com/msgrd?v=3&uin=1941639715&site=qq&menu=yes" className="qq" target="_blank" />
+                <a href="https://github.com/LitileXueZha" className="github" target="_blank" rel="nofollow noopener noreferrer" />
+                <a href="http://wpa.qq.com/msgrd?v=3&uin=1941639715&site=qq&menu=yes" className="qq" target="_blank" rel="nofollow noopener noreferrer" />
               </footer>
             );
           }
