--- a/show.html
+++ b/show.html
@@ -95,27 +95,27 @@
     <!--  以上是导航  -->
     <br/><br/><br/>
     <fieldset id="jp">
-        <legend>j query+php<a href="../jquery+php/index.html"><i class="fa fa-eye"></i></a></legend>
+        <legend>j query+php<a href="#jp"><i class="fa fa-eye"></i></a></legend>
         <p class="example-p">
             用半熟的jquery和不知深浅的php，对着书上敲的代码
         </p>
-        <iframe src="../jquery+php/index.html" class="example-frame"></iframe>
+        <iframe src="404" class="example-frame"></iframe>
     </fieldset>
     <br/><br/><br/>
     <fieldset id="cw">
-        <legend>c lassWork<a href="../classWork/index.html"><i class="fa fa-eye"></i></a> </legend>
+        <legend>c lassWork<a href="#cw"><i class="fa fa-eye"></i></a> </legend>
         <p class="example-p">一个课程设计，网络爬虫。主程序用python设计的，参考的是慕课网上的一个简单案例
         ，然后爬取百度文库里的文章以及相关的一些资料
         </p>
-        <iframe src="../classWork/index.html" class="example-frame"></iframe>
+        <iframe src="404" class="example-frame"></iframe>
     </fieldset>
     <br/><br/><br/>
     <fieldset id="mzh">
-        <legend>M r.Zhang homework<a href="../Mr.Zhang%20homework/content.html"><i class="fa fa-eye"></i></a> </legend>
+        <legend>M r.Zhang homework<a href="#mzh"><i class="fa fa-eye"></i></a> </legend>
         <p class="example-p">这是猪大头(要是被他看到这三个字估计要被打)的课程设计，由于这比天天打撸，所以老师
         教他的html，asp啥的都当耳边风了，我这用的是php写的一个学生成绩管理系统，只有最基础的增删改查功能
         </p>
-        <iframe src="../Mr.Zhang%20homework/content.html" class="example-frame"></iframe>
+        <iframe src="404" class="example-frame"></iframe>
     </fieldset>
 </div>
 <br/><br/>
