--- a/videoPlay.html
+++ b/videoPlay.html
@@ -59,7 +59,7 @@
     <div class="row">
         <div class="col-lg-10 video-container">
             <video
-                    src="video/天将雄师720p.mp4"
+                    src="https://youku.cdn-tudou.com/20180521/6070_349d1765/index.m3u8"
                     class="video"
                     id="video"
                     poster="pic/img-movie.png"
