--- a/index.html
+++ b/index.html
@@ -186,15 +186,15 @@
                 <table class="table table-hover table-responsive">
                     <tr>
                         <th>1</th><td>UI</td>
-                        <td><a href="http://www.jq22.com/jqueryUI-1-jq"><i class="fa fa-pagelines"></i></a></td>
+                        <td><a href="http://www.jq22.com/jqueryUI-1-jq" rel="nofollow noopener noreferrer"><i class="fa fa-pagelines"></i></a></td>
                     </tr>
                     <tr>
                         <th>2</th><td>媒体</td>
-                        <td><a href="http://www.jq22.com/jquery%E5%AA%92%E4%BD%93-1-jq"><i class="fa fa-circle"></i></a></td>
+                        <td><a href="http://www.jq22.com/jquery%E5%AA%92%E4%BD%93-1-jq" rel="nofollow noopener noreferrer"><i class="fa fa-circle"></i></a></td>
                     </tr>
                     <tr>
                         <th>3</th><td>导航</td>
-                        <td><a href="http://www.jq22.com/jquery%E5%AF%BC%E8%88%AA-1-jq"><i class="fa fa-share"></i></a></td>
+                        <td><a href="http://www.jq22.com/jquery%E5%AF%BC%E8%88%AA-1-jq" rel="nofollow noopener noreferrer"><i class="fa fa-share"></i></a></td>
                     </tr>
                 </table>
             </div>
@@ -214,15 +214,15 @@
                 <table class="table table-hover table-responsive">
                     <tr>
                         <th>1</th><td>下载</td>
-                        <td><a href="http://v3.bootcss.com/getting-started/#download"><i class="fa fa-download"></i></a></td>
+                        <td><a href="http://v3.bootcss.com/getting-started/#download" rel="nofollow noopener noreferrer"><i class="fa fa-download"></i></a></td>
                     </tr>
                     <tr>
                         <th>2</th><td>4.0</td>
-                        <td><a href="https://v4.bootcss.com/"><i class="fa fa-eye"></i></a></td>
+                        <td><a href="https://v4.bootcss.com/" rel="nofollow noopener noreferrer"><i class="fa fa-eye"></i></a></td>
                     </tr>
                     <tr>
                         <th>3</th><td>应用</td>
-                        <td><a href="http://expo.bootcss.com/"><i class="fa fa-superscript"></i></a></td>
+                        <td><a href="http://expo.bootcss.com/" rel="nofollow noopener noreferrer"><i class="fa fa-superscript"></i></a></td>
                     </tr>
                 </table>
             </div>
